# xenomorphic

./: CONTRIBUTING.md  Cargo.toml  FORK_NOTICE.md  README.md  remove-windows-support.sh  typos.toml
.github/workflows/: bump_patch_version.yml  bump_zed_version.yml  compliance_check.yml  release.yml  release_nightly.yml
assets/keymaps/: default-macos.json
assets/settings/: default.json
crates/acp_tools/: Cargo.toml
crates/action_log/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent_servers/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/askpass/: Cargo.toml
crates/audio/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_helper/: Cargo.toml
crates/auto_update_helper/src/: auto_update_helper.rs  dialog.rs  updater.rs
crates/auto_update_ui/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/cli/: Cargo.toml  build.rs
crates/client/: Cargo.toml
crates/cloud_llm_client/: Cargo.toml
crates/codestral/: Cargo.toml
crates/collab/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/copilot/: Cargo.toml
crates/crashes/: Cargo.toml
crates/dap/: Cargo.toml
crates/db/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/docs_preprocessor/: Cargo.toml
crates/edit_prediction/: Cargo.toml
crates/edit_prediction_cli/: Cargo.toml  build.rs
crates/fs/: Cargo.toml
crates/xeta_prompt/: Cargo.toml
crates/xeta_prompt/src/: xeta_prompt.rs
crates/xlog_settings/: Cargo.toml
crates/xlog_settings/src/: xlog_settings.rs
(+661 files in other folders)
