[package]
name = "auto_update_helper"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "auto_update_helper"
path = "src/auto_update_helper.rs"
doctest = false

[dependencies]
anyhow.workspace = true
log.workspace = true
simplelog.workspace = true

[target.'cfg(target_os = "windows")'.dev-dependencies]
tempfile.workspace = true

[build-dependencies]
[package.metadata.docs.rs]
