[package]
name = "xeta_prompt"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/xeta_prompt.rs"

[dependencies]
anyhow.workspace = true
imara-diff.workspace = true
serde.workspace = true
strum.workspace = true

[dev-dependencies]
indoc.workspace = true
