[package]
name = "xlog_settings"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/xlog_settings.rs"

[features]
default = []

[dependencies]
gpui.workspace = true
collections.workspace = true
settings.workspace = true
xlog.workspace = true
